# outwire-digest

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: weekly_digest.yml
output/: last_digest.html  last_digest.md
prompts/: editorial_system.md  scoring_system.md
scripts/: publish.sh  test_api.py
src/outwire/: main.py
src/outwire/collector/: models.py  rss.py  sources.py
src/outwire/editorial/: renderer.py  sonnet.py
src/outwire/editorial/templates/: digest.html
src/outwire/publisher/: email_backup.py  substack.py
src/outwire/scorer/: haiku.py  prompts.py
src/outwire/utils/: config.py  dedup.py  state.py
state/: seen_articles.json
